# ni-vnf-deployment

./: ILP_monitor.txt  ML_monitor.txt  README.md  Scenario_gen.py  Scenario_gen_one_flow.py  X1_sfc1_ni.pickle  create_dashboard.py  deployment.py  input.json  labeling_pickle.pickle  middlebox-spec  mygnn.py  old.py  op_vnf_deployment.py  op_vnf_deployment.txt.txt  requirements.txt  setup.py  test.txt  test5.py  testbed-8  topology.txt  traf.txt  vnf_placement_model.h5  vnf_placement_model.json  vnf_placement_model_cnsm.h5  vnf_placement_model_cnsm.json
config/: config.yaml
env_data/: middlebox-spec  testbed  testbed-clean
server/: __main__.py
server/controllers/: default_controller.py
server/models/: target_vnf_sfc_info.py
server/swagger/: swagger.yaml
solver_src/: CMakeLists.txt  Makefile  cplex5-pz.h  log.cplex.cost.ts  log.cplex.paths  log.cplex.sequences  log.cplex.util.ts  logstimeline  mec  middlebox-spec  middleman.cc  testbed  testbed-8  testbed-a  testbed-b  testbed-c  util.h  viterbi.h
solver_src/logs/: nodeinfo-testbed-8.txt  nvnfs-testbed-8.txt  routeinfo-testbed-8.txt  traf-testbed-8-00000  traf-testbed-8-00002
solver_src/logs/Untitled Folder/: nodeinfo-testbed-8.txt  nvnfs-testbed-8.txt  routeinfo-testbed-8.txt  traf-testbed-8-00001  traf-testbed-8-00002  traf-testbed-8-00003
swagger_server/: __main__.py
swagger_server/swagger/: swagger.yaml
tg/: 001_generateSFCRTrace.R  006_export_gnn_input_fn_regression.r  abilene-week1.csv  runwk_template.sh  sfccat-wk1_sfccat_norm_inet2.csv  sfclist_regression.py  sfcnodes-wk1_sfccat_norm_inet2.csv
(+2 files in other folders)
